increase permgen max to 512mb for less oom in dev